<resources>
    <string name="app_name">MusiQueue</string>
    <string name="title_activity_queue">Queue</string>
    <string name="create_name">CREATE A NAME</string>
    <string name="username">Username</string>
    <string name="submit">SUBMIT</string>
    <string name="create_hub">CREATE A HUB</string>
    <string name="hub_name">Hub Name</string>
    <string name="pass_pin">4-Digit Pass Pin</string>
    <string name="name">Name</string>
    <string name="four_digit_pass_pin">1234</string>
    <string name="create">CREATE</string>
    <string name="hub_coord">Hub Coordinator</string>
    <string name="enter_pin_to_join">Enter 4-Digit Hub Pin To Join</string>
    <string name="join">JOIN</string>
    <string name="search">SEARCH</string>
    <string name="failed">Failed to initialize Youtube Player</string>
    <string name="hubs_nearby">HUBS NEARBY</string>
    <string name="recent_hubs">RECENT HUBS</string>
    <string name="search_hubs">SEARCH HUBS</string>

</resources>
