<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_hub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vince.youtubeplayertest.Activities.users_only.SearchHub">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/search_by_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_bubble_button"
            android:onClick="searchByName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="By Name" />

        <Button
            android:id="@+id/search_by_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_bubble_button"
            android:onClick="searchByLocation"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="By Location" />
    </LinearLayout>

    <TextView
        android:id="@+id/hubs_near_you_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hubs Near You"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/search_bar_hubs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#C4C2C1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/hub_name_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="@string/hub_name"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <Button
            android:id="@+id/hub_name_search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="search"
            android:text="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hub_type_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/recent_hubs"
            android:id="@+id/search_hubs_recent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:text="@string/hubs_nearby"
            android:id="@+id/search_hubs_nearby_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/hubs_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar_hubs"
        android:background="@drawable/hub_search_background">


    </android.support.v7.widget.RecyclerView>

</LinearLayout>
